--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         display: grid;
                         grid-template-columns: repeat(3, 1fr);
                         gap: 1rem;
+                        padding: 1rem 0; /* Optional: adds vertical space around the entire grid */
                     }
                     
                     @media (max-width: 768px) {
